2017-06-04  Tom de Vries  <tom@codesourcery.com>

	* testsuite/runtest.all/libs.exp (process_test): Dump entire
	output when there's no reportable output.
	* testsuite/runtest.all/remote.test (load_lib): New proc.
	* testsuite/runtest.all/target.test (load_lib): Same.

2017-03-11  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* lib/remote.exp (remote_download): Add logging message when
	source and destination file differ in name.

2016-09-04  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* runtest.exp: Set CCACHE_DISABLE, clear CCACHE_NODISABLE.

2016-06-28  Ben Elliston  <bje@gnu.org>

	* aclocal.m4, Makefile.in: Regenerate with automake 1.15.
	* configure: Regenerate.

2016-06-22  Bernhard Reutner-Fischer  <rep.dot.nop@gmail.com>

	* configure.ac, dejagnu.h, runtest, runtest.exp,
	baseboards/am33_2.0-libremote.exp, baseboards/androideabi.exp,
	baseboards/arm-ice.exp, baseboards/arm-sid.exp,
	baseboards/arm-sim.exp, baseboards/basic-sid.exp,
	baseboards/basic-sim.exp, baseboards/cris-sim.exp,
	baseboards/d30v-sim.exp, baseboards/fr30-sim.exp,
	baseboards/frv-sim.exp, baseboards/gdbserver-sample.exp,
	baseboards/i386-sid.exp, baseboards/iq2000-sim.exp,
	baseboards/jmr3904-sim.exp, baseboards/linux-gdbserver.exp,
	baseboards/linux-libremote.exp, baseboards/m68k-sid.exp,
	baseboards/mcore-moto-sim.exp, baseboards/mcore-sim.exp,
	baseboards/mips-lnews-sim.exp, baseboards/mips-lsi-sim.exp,
	baseboards/mips-sim-idt32.exp, baseboards/mips-sim-idt64.exp,
	baseboards/mips-sim-mti32.exp, baseboards/mips-sim-mti64.exp,
	baseboards/mips-sim-mti64_64.exp,
	baseboards/mips-sim-mti64_n32.exp, baseboards/mips-sim-sde32.exp,
	baseboards/mips-sim-sde64.exp, baseboards/mips-sim.exp,
	baseboards/mmixware-sim.exp, baseboards/mn10200-sim.exp,
	baseboards/mn10300-sim.exp, baseboards/moxie-sim.exp,
	baseboards/mt-sid.exp, baseboards/multi-sim.exp,
	baseboards/powerpc-sim.exp, baseboards/powerpcle-sim.exp,
	baseboards/rx-sim.exp, baseboards/sh-sid.exp,